--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "lodash": "^4.17.5",
+    "passport": "^0.4.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "react": "^16.3.1",
