--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.15.6",
     "lodash": "^4.17.5",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "react": "^16.3.1",
