--- a/package.json
+++ b/package.json
@@ -1,45 +1,74 @@
 {
   "name": "boilermaker",
   "version": "1.0.0",
-  "description": "",
+  "description": "Some boilerplate code to get you started - get shakin'!",
+  "engines": {
+    "node": ">= 7.0.0"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-client": "webpack",
+    "build-client-watch": "webpack -w",
+    "deploy": "script/deploy",
+    "lint": "eslint ./ --ignore-path .gitignore",
+    "prepush": "npm run lint && npm test",
+    "postinstall": "touch secrets.js",
+    "seed": "node script/seed.js",
     "start": "node server",
-    "start-dev": "webpack -w & nodemon server.js"
+    "start-dev": "NODE_ENV='development' npm run build-client-watch & npm run start-server",
+    "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
+    "test": "NODE_ENV='test' mocha ./server/**/*.spec.js ./server/**/**/*.spec.js ./client/**/*.spec.js --require @babel/polyfill --require @babel/register"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Fullstack Academy of Code",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^0.18.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "lodash": "^4.17.5",
-    "passport": "^0.4.0",
+    "axios": "^0.15.3",
+    "body-parser": "^1.16.1",
+    "compression": "^1.7.1",
+    "connect-session-sequelize": "^4.1.0",
+    "express": "^4.14.1",
+    "express-session": "^1.15.1",
+    "history": "^4.6.3",
+    "morgan": "^1.8.1",
+    "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
-    "pg": "^7.4.1",
+    "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
+    "prop-types": "^15.5.8",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.2",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
-    "sequelize": "^4.37.6",
-    "volleyball": "^1.4.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "sequelize": "^4.3.1",
+    "socket.io": "^2.0.3"
   },
   "devDependencies": {
-    "css-loader": "^0.28.11",
-    "nodemon": "^1.17.3",
-    "style-loader": "^0.20.3"
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/polyfill": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/preset-react": "^7.0.0-beta.40",
+    "@babel/preset-stage-2": "^7.0.0-beta.40",
+    "@babel/register": "^7.0.0-beta.40",
+    "axios-mock-adapter": "^1.9.0",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^8.0.0-beta.2",
+    "chai": "^3.5.0",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "eslint": "^4.10.0",
+    "eslint-config-fullstack": "^3.0.0",
+    "eslint-plugin-react": "^7.4.0",
+    "husky": "^0.14.3",
+    "mocha": "^3.3.0",
+    "nodemon": "^1.12.1",
+    "react-test-renderer": "^16.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-mock-store": "^1.2.3",
+    "supertest": "^3.0.0",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9"
   }
 }
